# life-support

./: LICENSE  README.md
.github/workflows/: containers.yml
app/: Dockerfile  package.json
app/src/lib/: pocketbase.ts  todos.ts
app/src/lib/components/: TodoItem.svelte
app/src/routes/: +error.svelte  +layout.svelte  +page.svelte
app/src/routes/account/: +page.svelte
app/src/routes/account/oauth2/: +page.svelte  +page.ts
app/src/routes/todos/: +layout.ts  +page.svelte  +page.ts
app/src/routes/todos/[slug]/: +page.svelte  +page.ts
cli/: pubspec.yaml
cli/lib/: cli.dart
cli/lib/printer/: constants.dart  printer.dart
pb_migrations/: 1672500311_created_todos.js  1672500333_updated_todos.js  1672502293_updated_todo_lists.js  1672502355_updated_todo_lists.js  1672506640_updated_todos.js  1673019342_created_people.js  1673019451_created_payments.js  1673019927_created_outstanding_payments.js  1673019956_updated_outstanding_payments.js  1673020045_updated_outstanding_payments.js
pocketbase/: Dockerfile
pocketbase/pb_migrations/: 1672500377_created_todos.js  1672500399_updated_todo_lists.js  1672502230_updated_todo_lists.js  1672506619_updated_todo_lists.js
printer-cli/: Dockerfile  README.md  pyproject.toml
printer-cli/printer_cli/: __main__.py  main.py  print.py  printer.py
